Add Picocli for selecting sources.